# CHomework-Chess

./: .gitignore  CMakeLists.txt  README.md  chess_clock.c  chess_clock.h
res/: todo
src/: board.h  main.c  mallocer.h  move.h  new_chess.c  piece.c  piece.h  save.c  save.h  save.h.h  state.c  state.h
src/boards/: board.h  board_interface.h  position.h  stdboard.c  stdboard.h
src/core/: move.h  position.h  state.c  state.h
src/core/boards/: board.h  board_base.h  stdboard.c  stdboard.h
src/core/game/: game.c  game.h
src/core/pieces/: bishop.c  bishop.h  distance.h  king.c  king.h  knight.c  knight.h  pawn.c  pawn.h  piece.c  piece.h  piece_base.h  queen.c  queen.h  rook.c  rook.h
src/gui/: button.c  button.h  common.h  utils.c  utils.h
src/gui/events/: events.c  events.h
src/gui/scenes/: scene_game.c  scene_game.h  scene_mainmenu.c  scene_mainmenu.h
src/gui/timer/: timer.c  timer.h
src/pieces/: bishop.c  bishop.h  king.c  king.h  knight.c  knight.h  pawn.c  pawn.h  piece.c  piece.h  piece_base.h  piece_interface.h  queen.c  queen.h  rook.c  rook.h
tests/: test_piece.c  test_pieces.c  test_state.c
